# sample-app-from-template

./: .agent-policy.toml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: loop.md  review.md
.codex/: README.md  config.example.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ai-task.yml  bug.yml  feature.yml
.github/workflows/: ci.yml
adapters/: android.toml  generic.toml  go.toml  node.toml  python.toml  rust.toml
docs/: ai-operation.md  architecture.md  compatibility.md  estimation-template.md  glossary.md  migration-v1.md  project-context.md  release-checklist.md  ride-or-build.md  sample-app-development-report.md
docs/decisions/: README.md
fixtures/go/: go.mod
fixtures/node/: package.json
prompts/: fix-validation.md  implement-task.md  review-feature.md
schemas/: event.schema.json  notification.schema.json  review-result.schema.json
scripts/: check-secrets.sh  init-project.sh  validate-spec.sh
scripts/agent/: __init__.py  gates.py  (+32 more)
specs/: README.md
tests/: test_agent_interfaces.py  test_agent_parser.py  test_agent_safety.py  test_autonomous_core.py  test_autonomous_delivery.py  test_delivery_evidence_snapshot.py  test_delivery_review_integrity.py  test_post_repair_weakening_order.py  test_production_ready.py  test_recovery_patch.py  test_review_gate_semantics.py  test_review_redaction_evidence.py  test_spec_lint.py  test_weakening_evidence.py
(+244 files in other folders)
